# async-distributed-web-crawler

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
crawler/: config.py  defensive.py  dupe.py  frontier.py  main.py  parser.py  rate_limiter.py  robots.py  storage.py  worker.py
samples/: sample-metrics.json  sample-status.json
scripts/: export_domain_png.py  export_focus_url_png.py  show_stats.py  view_status.ps1  visualize_graph.py
tests/: test_normalize.py  test_parser.py
