[project]
name = "distributed-crawler"
version = "0.1.0"
description = "Asynchronous distributed-style web crawler with Redis frontier and Mongo storage"
authors = [ { name = "Your Name" } ]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["crawler","asyncio","redis","mongodb","web crawling"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.dependencies]
aiohttp = "3.9.5"
beautifulsoup4 = "4.12.3"
redis = "5.0.8"
motor = "3.7.1"
python-dotenv = "1.0.1"
networkx = "3.2.1"
pyvis = "0.3.2"
pytest = "8.2.1"

[project.optional-dependencies]
dev = ["black","ruff","mypy"]

[project.scripts]
crawler-cli = "crawler.main:main"

[build-system]
requires = ["setuptools>=67","wheel"]
build-backend = "setuptools.build_meta"
